favicon, gitignore, github icon on landing page

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 	<meta name="description" content="Dylan Kario | Frontend Developer &amp; Artist">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
+	<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
 	<style>
 		body {
 			width: 100%;
@@ -25,12 +26,29 @@
 			font-family: 'Open Sans', sans-serif;
 			color: #eee;
 		}
+
+		a:visited {
+			color: #eee;
+		}
+
+		i#github {
+			transition: color 100ms ease-in;
+			text-decoration: none;
+		}
+
+		i#github:hover {
+			color: #0096d1;
+		}
+
 	</style>
 </head>
 <body>
 	<div id="construction">
 		<h1>under construction</h1>
 		<h3>check back soon!</h3>
+		<a href="https://github.com/dkario">
+			<i id="github" class="fa fa-github fa-4x"></i>
+		</a>
 	</div>
 </body>
 </html>
