--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
 	<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
+	<link rel="icon" href="favicon.ico">
 	<style>
 		body {
 			width: 100%;
@@ -27,8 +28,9 @@
 			color: #eee;
 		}
 
-		a:visited {
+		a {
 			color: #eee;
+			text-decoration: none;
 		}
 
 		i#github {
