--- a/index.html
+++ b/index.html
@@ -15,23 +15,17 @@
 			margin: 0;
 		}
 
-		div#cont {
+		div#construction {
+			height: 210px;
+			margin: auto;
 			position: absolute;
-			height: 100%;
 			top: 0;
 			left: 0;
 			bottom: 0;
 			right: 0;
-		}
-
-		div#construction {
-			position: relative;
-			top: 50%;
-			left: 50%;
-			transform: translate(-50%, -50%);
+			text-align: center;
 			font-family: 'Open Sans', sans-serif;
 			color: #eee;
-			text-align: center;
 		}
 
 		a {
@@ -51,14 +45,12 @@
 	</style>
 </head>
 <body>
-	<div id="cont">
 	<div id="construction">
 		<h1>under construction</h1>
 		<h3>check back soon!</h3>
 		<a href="https://github.com/dkario">
 			<i id="github" class="fa fa-github fa-4x"></i>
 		</a>
-	</div>
 	</div>
 </body>
 </html>
