--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<title>DK | Under Construction</title>
 	<meta name="description" content="Dylan Kario | Frontend Developer &amp; Artist">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
+	<link href='http://fonts.googleapis.com/css?family=Open+Sans:300' rel='stylesheet' type='text/css'>
 	<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
 	<link rel="icon" href="favicon.ico">
 	<style>
@@ -25,7 +25,12 @@
 			right: 0;
 			text-align: center;
 			font-family: 'Open Sans', sans-serif;
+			-webkit-font-smoothing: antialiased;
 			color: #eee;
+		}
+
+		h1, h3 {
+			font-weight: normal;
 		}
 
 		a {
@@ -46,8 +51,8 @@
 </head>
 <body>
 	<div id="construction">
-		<h1>under construction</h1>
-		<h3>check back soon!</h3>
+		<h1>Under construction</h1>
+		<h3>Check back soon!</h3>
 		<a href="https://github.com/dkario">
 			<i id="github" class="fa fa-github fa-4x"></i>
 		</a>
