updated github link to repo page

--- a/pyramid/index.html
+++ b/pyramid/index.html
@@ -24,7 +24,7 @@
 
 	<footer>
 		<div>Want to see how it works?</div>
-		<a href="https://github.com/dkario"><i class="fa fa-github fa-2x"></i></a>
+		<a href="https://github.com/dkario/PyramidTraveler"><i class="fa fa-github fa-2x"></i></a>
 	</footer>
 
 
